# P2G-Dashboard

./: CMakeLists.txt  INSTALL.md  README.md  cmake.yml  config.json  resources.qrc
driver/udev/: 10-p2g-linux.rules  90-p2g-linux.rules
src/: CMakeLists.txt  constants.h  endpoint_type.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  radar.cpp  radar.h  signalprocessor.cpp  signalprocessor.h  status.cpp  status.h  types.h
src/gui/: CMakeLists.txt
src/gui/chart/: CMakeLists.txt
src/gui/chart/rangedata/: CMakeLists.txt  rangedatachart.cpp  rangedatachart.h
src/gui/chart/targetdata/: CMakeLists.txt  targetdatachart.cpp  targetdatachart.h
src/gui/chart/timedata/: CMakeLists.txt  timedatachart.cpp  timedatachart.h
src/gui/dashboard/: CMakeLists.txt  dashboard.cpp  dashboard.h  dashboard.ui
src/gui/settings/: CMakeLists.txt  settings.cpp  settings.h  settings.ui
src/gui/status/: CMakeLists.txt
src/gui/statusbar/: CMakeLists.txt  statusbar.cpp  statusbar.h
src/gui/toolbar/: CMakeLists.txt  toolbar.cpp  toolbar.h
src/logic/: CMakeLists.txt
src/logic/radar/: CMakeLists.txt  radar.cpp  radar.h
src/logic/settings/: CMakeLists.txt  settingsloader.cpp  settingsloader.h
src/logic/signalprocessor/: CMakeLists.txt  signalprocessor.h
src/misc/: CMakeLists.txt  constants.h  messagehandler.h  types.h
src/plots/: rangedataplot.cpp  rangedataplot.h  targetdataplot.cpp  targetdataplot.h  timedataplot.cpp  timedataplot.h
